[package]
name = "financial-assessment-e2324103"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.3.0", features = ["serde"] }
csv = "1.1.6"
num-bigint = "0.4.3"
num-traits = "0.2.15"
serde = { version = "1.0.144", features = ["derive"] }
